--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,19 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+mcversion=1.12.2
+forgeversion=14.23.5.2847
+mcp_mappings=stable_39
+curse_project_id=59751
+
+tesla_version=1.0.60
+tesla_mcversion=1.12
+jei_version=4.15.0.291
+jei_mcversion=1.12.2
+ic2_version=2.8.90-ex112
+TR_mcversion=1.12.2
+TR_version=2.13.2.561
+buildcraft_version=7.99.17
+version_major=5
+version_minor=8
+version_patch=2
