--- a/build.gradle
+++ b/build.gradle
@@ -117,4 +117,4 @@ publishing {
     }
 }
 
-sourceSets { main { output.resourcesDir = output.classesDir } }
+sourceSets { main { output.resourcesDir = output.getClassesDirs().getAsPath() } }
